1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* FEntity.m ([FEntity -setCanvas:]): New method.  Keep all the
	component canvases in sync.

	* BankObserverSwarm.m ([BankObserverSwarm -_graphCanvasDeath_:]): 
	New method; drops the canvas and clears the bankModelSwarm canvas.
	([BankObserverSwarm -buildObjects]): Call enableDestroyNotification
	on self with method above.

	* BankModelSwarm.m: ([BankModelSwarm -setGraphCanvas:]): If theFNet
	has been initialized, set it's canvas with the argument too.

1998-01-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): 
	Use CREATE_ARCHIVED_PROBE_DISPLAY to create bankModelSwarm and
	bankObserverSwarm probe displays.

	* Makefile (SWARMHOME): Default to 1.0.5.

1998-01-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Set basename of observerSwarm.  Minor reformatting.

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Eliminate
	inline configuration of GUISwarm.

1998-01-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Adjust
	for renamed setWindowGeometryRecordName (from
	setControlPanelGeometryRecordName).

1998-01-06  Alex Lancaster  <alex@wijiji.santafe.edu>

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Renamed
	setGraphWindowGeometryRecordName to setWindowGeometryRecordName.

1998-01-05  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Create
	controlPanel and actionCache so that the archive name can be set.
	Use the	setWindowGeometryRecordName version of createProbeDisplayFor
	for BankModelSwarm and BankObserverSwarm.
	Call setWindowGeometryRecordName for graphCanvas, investorGraph.
	Call setGraphWindowGeometryRecordName for activeBanks.
	Reformatting throughout.

1997-12-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile: Don't define SWARMHOME if it already exists.
