@@ -1,3 +1,11 @@
+1998-01-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Use
+	SET_WINDOW_GEOMETRY_RECORD_NAME for graphCanvas, activeBanks, and 
+	investorGraph.
+	
+	* main.m (main): Likewise, but for observerSwarm.
+	
 1998-01-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* FEntity.m ([FEntity -setCanvas:]): New method.  Keep all the
